--- a/70045-h/70045-h.htm
+++ b/70045-h/70045-h.htm
@@ -52,9 +52,7 @@ padding:.1em;border-bottom:1px solid black;border-left:none;border-right:none;}
 
 p {margin-top:.2em;text-align:justify;margin-bottom:.2em;text-indent:4%;}
 
-.pagenum  {font-style:normal;position:absolute;
-left:95%;font-size:55%;text-align:right;color:gray;
-background-color:#ffffff;font-variant:normal;font-style:normal;font-weight:normal;text-decoration:none;text-indent:0em;}
+.pagenum  {display:none;}
 
 small {font-size: 70%;}
 
@@ -88,7 +86,7 @@ country where you are located before using this eBook.
 
 <p style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Title: Coloured engravings of heaths; vol. 2</p>
 <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Author: Henry C. Andrews</p>
-<p style='display:block; text-indent:0; margin:1em 0'>Release Date: February 15, 2023 [eBook #70045]</p>
+<p style='display:block; text-indent:0; margin:1em 0'>Release Date: February 18, 2023 [eBook #70045]</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Language: English</p>
   <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em; text-align:left'>Produced by: Chuck Greif and the Online Distributed Proofreading Team at https://www.pgdp.net (This file was produced from images generously made available by Biodiversity Heritage Library.)</p>
 <div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK COLOURED ENGRAVINGS OF HEATHS; VOL. 2 ***</div>
